<resources>
    <string name="app_name">GoesPudd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_menu_home">For You</string>
    <string name="tab_menu_cart">Your Cart</string>
    <string name="tab_menu_profile">Profile</string>
    <string name="text_username_home">Hai, Deni!</string>
    <string name="text_question_home">Hari ini kamu mau makan apa?</string>
    <string name="text_tittle_banner">ALL FAST FOOD DISCOUNT UP TO 50%</string>
    <string name="text_description_banner">Discount tersedia hanya untuk pengguna yang memiliki Ticket. Ayo cepat claim Ticket sekarang juga!!!</string>
    <string name="text_header_list_menu">List Menu Makanan</string>
    <string name="text_rupiah">Rp.</string>
    <string name="text_order_cart">Tambah ke Keranjang -</string>
    <string name="text_location">Lokasi</string>
    <string name="text_grid_mode">Grid Mode</string>
    <string name="text_list_mode">List Mode</string>
    <string name="text_counter">1</string>
    <string name="hint_username">Username</string>
    <string name="text_username">Deny Iqbal Mubarok</string>
    <string name="hint_email">Email</string>
    <string name="text_email">denyiqbalmubarok773@gmail.com</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="text_phone_number">081212345678</string>
    <string name="text_edit_data">Edit Data</string>
    <string name="text_hint_notes">Catatan</string>
    <string name="text_title_my_cart">My Cart</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_total_price">Total Harga</string>
    <string name="text_add_to_cart_success">Pesanan berhasil masuk ke Cart</string>
    <string name="add_to_cart_failed">Pesanan anda gagal masuk ke cart</string>
    <string name="loading">Loading. . .</string>
    <string name="total_quantity">x%s</string>
    <string name="text_title_order_confirmation">Konfirmasi Pesanan</string>
    <string name="text_delivery_method">Metode Pengiriman</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment_method">Metode Pembayaran</string>
    <string name="text_cash">Cash</string>
    <string name="text_e_wallet">E-Wallet</string>
    <string name="shopping_summary">Ringkasan Pembayaran</string>
    <string name="text_cart_is_empty">Keranjang Anda Kosong</string>
    <string name="text_my_profile">My Profile</string>
    <string name="text_checkout_success">Pesanan Berhasil</string>
    <string name="text_goto_home">Kembali ke Home</string>

    <string name="hint_name">Your name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_register">Register</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="text_data_error">Data Error</string>
    <string name="text_register_success">Register Berhasil</string>
    <string name="text_register_failed">Register Gagal</string>
    <string name="text_login_failed">Login Gagal</string>
    <string name="text_login_success">Login Berhasil</string>
    <string name="error_checkout">Checkout Error</string>
    <string name="text_logout_confirmation">Anda ingin Logout?</string>
    <string name="text_cancel">Tidak</string>
    <string name="text_confirm">Ya</string>

</resources>