<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title_toolbar"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:text="@string/text_my_profile"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_img_user_profile"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="24dp"/>

    <!-- Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textStyle="bold"
            android:hint="@string/hint_username"
            android:text="@string/text_username" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Username Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textStyle="bold"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:text="@string/text_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textStyle="bold"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            android:text="@string/text_phone_number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_edit_data" />

    <ImageButton
        android:id="@+id/ib_logout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_logout"
        android:layout_marginTop="50dp"
        android:layout_marginStart="300dp"/>

</LinearLayout>